feat(file-mgmt): accept overwrite param to make overwriting on key collision explicit
