# packages/core/openapi/paths/files.yaml
@@ -57,6 +57,8 @@ files_upload:
               metadata:
                 type: object
                 additionalProperties: { type: string }
+              overwrite:
+                type: boolean
             required: [file]
     responses:
       '201':
@@ -66,6 +68,16 @@ files_upload:
             schema: { type: string }
           Location:
             description: URL of the created resource
+            schema: { type: string }
+        content:
+          application/json:
+            schema: { $ref: ../components/schemas/File.yaml }
+      '200':
+        description: Updated (overwrite)
+        headers:
+          ETag:
+            schema: { type: string }
+          Location:
             schema: { type: string }
         content:
           application/json:
